# Vuz-raboti

./: .gitignore  .~lock.Scrum-meeting-33.docx#  README.md  payload.txt  pyproject.toml
3rd_semester/analiz-trebovanij/: Гуртякин Егор КИ23-17.1б пр2.docx  Гуртякин Егор КИ23-17.1б пр3.docx  Гуртякин Егор КИ23-17.1б пр4.docx  Гуртякин Егор КИ23-17.1б пр5.odt
4th_semester/db/: docker-compose.yaml
4th_semester/image-colorer/: input.docx  main copy.py  main.py  my-docx-v1-without-autodetect.py  my-docx-v2-with-color-analuze.py  my-docx.py
4th_semester/praktika/: _ТС_ПР6-ч1в2_Гуртякин Егор Алексеевич _КИ23-16-1б_.docx  Второй_Промежуточный_отчет_по_производственной_практике_Сурков_Даниил.docx  Гуртякин Егор Алексеевич.docx  отчет_по_производственной_1.docx  отчет_по_производственной_2.docx
4th_semester/prpo/: .~lock.Гуртякин Егор КИ23-17.1б спринт 1.docx#  _Гуртякин Егор КИ23-17.1б спринт 3.docx  _Гуртякин Егор КИ23-17.1б спринт 4.docx  _Гуртякин Егор КИ23-17.1б спринт 5.docx  _Гуртякин Егор КИ23-17.1б спринт 7.docx  Выступление_Гуртякин_Егор_КИ23_17_1б.pptx  Гуртякин Егор КИ23-17.1б спринт 1.docx  Гуртякин Егор КИ23-17.1б спринт 2.docx  Гуртякин_Егор_КИ23_17_1б_финальный.docx  Отчёт по ППО.docx
4th_semester/tpo/: otchet_3.docx  (+2 more)
anal-trebovanij/: ~WRL2967.tmp  Гуртякин Егор КИ23-17.1б пр2.docx
analiz-trebovanij/: ~$ализ требований пр2.docx  ~$ртякин Егор КИ23-17.1б пр2.docx  Гуртякин Егор КИ23-17.1б пр5.docx  Гуртякин Егор КИ23-17.1б пр6.docx  Гуртякин Егор КИ23-17.1б пр6.odt  Гуртякин Егор КИ23-17.1б пр7 (Copy).docx  Гуртякин Егор КИ23-17.1б пр7.docx
(+684 files in other folders)
