[tool.poetry]
name = "vuz-raboti"
package-mode = false
version = "0.1.0"
description = ""
authors = ["egorgurtyakin <egorgurtyakin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
jupyter = "^1.1.1"
numpy = "^2.2.3"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
missingno = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
