[tool.poetry]
name = "vuz-raboti"
package-mode = false
version = "0.1.0"
description = ""
authors = ["egorgurtyakin <egorgurtyakin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
jupyter = "^1.1.1"
numpy = "^2.2.3"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
missingno = "^0.5.2"
scikit-learn = "^1.6.1"
openpyxl = "^3.1.5"
imbalanced-learn = "^0.13.0"
statsmodels = "^0.14.4"
boruta = "^0.4.3"
selenium = "^4.32.0"
pytest = "^8.3.5"
pyclip = "^0.7.0"
yellowbrick = "^1.5"
ipdb = "^0.13.13"
pygobject = "^3.54.3"
pulp = "^3.3.0"
fastapi = "^0.124.4"
bcrypt = "^5.0.0"
cryptography = "^46.0.3"
crypto = "^1.4.1"
ruff = "^0.14.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
